Fix golem overlapping destination tab, closes #215

--- a/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
+++ b/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
@@ -585,3 +585,7 @@ button.campHudSnowballShowdownView__buyButton {
 .greatWinterHuntClaimRewardDialogView__title {
   padding-left: 20px;
 }
+
+.greatWinterHuntGolemManagerDialogView__destinationViewContainer--active {
+  z-index: 11;
+}
